# ajo

./: .coverage  .gitignore  .pre-commit-config.yaml  .python-version  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
ajo/: main.py
ajo/access/: access.py
ajo/home/: home.py  salary.py
ajo/login/: login.py
ajo/setup/: setup.css  setup.html  setup.py
requirements/: requirements-dev.txt  requirements.txt
static/css/: access.css  home.css  home_old.css  login.css
static/js/: home.js
templates/: access.html  home.html  login.html  setup.html
tests/: conftest.py  test_home.py  test_main.py
