[tool.poetry]
name = "ajo"
version = "0.1.0"
description = "A Budget tool is based on Barefoot Investor "
authors = ["Adebayo Akinlalu <aakinlalu@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
fastapi = "^0.63.0"
Jinja2 = "^2.11.2"
aiofiles = "^0.6.0"
uvicorn = "^0.13.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.9.3"
tox = "^3.20.1"
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
